--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div id="rooms">
         Room:
         <select></select>
+        <input type="text" name="room" id="roomName"/>
         <button>Add Room</button>
       </div>
       <form action="#" id="send" method="post">
